Minor reformat